--- a/Toko-Onlen/style.css
+++ b/Toko-Onlen/style.css
@@ -1,70 +1,304 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-nav-left {
-    clear: both;
-    width: 30%;
+.logo img {
+  width: 100px;
+  display: block;
+  margin: auto;
 }
 
-nav-left h2 {
-    float: left;
-    margin-top: 5px;
-    margin-right: 20px;
+.header {
+  margin: 1%;
 }
 
-nav-left ul {
-    margin-top: 4%;
-    border-bottom: 0.5px solid lightgray;
+.nav-left,
+.nav-right {
+  background: rgb(224, 159, 159);
 }
 
-
-nav-left ul {
-    font-family: Arial, Helvetica, sans-serif;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+.nav-left ul,
+.nav-right ul {
+  list-style: none;
 }
 
-nav-left ul li {
-    color: #fff;
-    display: inline-block;
-    padding: 10px;
-    position: relative;
-    text-decoration: none;
-    transition-duration: 0.5s;
+.nav-left a,
+.nav-right a {
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+  color: #fff;
 }
 
-nav-left ul li a {
-    color: lightseagreen;
-    text-decoration: none;
+.nav-left a:hover {
+  background: rgb(243, 221, 221);
 }
 
-nav-left ul li:hover {
-    background: gray;
-    cursor: pointer;
+.nav-right a:hover {
+  background: rgb(243, 221, 221);
 }
 
-nav-left ul li ul {
-    visibility: hidden;
-    opacity: 0;
-    min-width: 5rem;
-    position: absolute;
-    transition: all 0.5s ease;
-    margin-top: 10px;
-    left: 0;
-    display: none;
+@media screen and (min-width: 560px) {
+  .header {
+    width: 960px;
+    margin: auto;
+    display: flex;
+    margin-top: 1%;
+    justify-content: space-between;
+  }
+  .nav-left ul {
+    display: flex;
+  }
+  .nav-right ul {
+    display: flex;
+  }
+  .nav-left,
+  .nav-right {
+    background: none;
+  }
+  .nav-left a,
+  .nav-right a {
+    color: black;
+  }
+}
+/* main */
+.main {
+  margin-top: 20px;
 }
 
-nav-left ul li:hover>ul,
-nav-left ul li ul:hover {
-    visibility: visible;
-    opacity: 1;
+.main-left img {
+  width: 250px;
+  display: block;
+  margin: auto;
+}
+
+.main-right {
+  text-align: center;
+  margin-top: 20px;
+}
+
+@media (min-width: 560px) {
+  .main {
+    width: 960px;
+    margin: auto;
+    display: flex;
+    margin-top: 30px;
+    justify-content: center;
+  }
+  .main-left img {
+    width: 600px;
+    margin-top: -30px;
+  }
+  .main-right {
+    margin: auto;
+    text-align: left;
+    margin-left: 30px;
+  }
+  .main-right h2 {
+    margin-bottom: 10px;
+    font-size: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  }
+}
+/* produk */
+
+.display {
+  margin-top: 3%;
+  text-align: center;
+  color: blue;
+}
+.image img {
+  width: 250px;
+  display: block;
+  margin: auto;
+}
+.produk-content {
+  text-align: center;
+  margin: 20px;
+}
+.deskripsi p {
+  font-size: 15px;
+}
+@media (min-width: 560px) {
+  .produk {
+    width: 960px;
+    margin: auto;
+    display: flex;
+  }
+  .produk-content {
+    height: 300px;
+  }
+  .image {
+    height: 200px;
+    width: 200px;
+  }
+  .image img {
+    width: 200px;
     display: block;
+    margin: auto;
+  }
+  .display {
+    font-size: 30px;
+  }
+}
+/* Informasi */
+.info {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.info-content {
+  height: 70px;
+  width: 180px;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+.icon img {
+  width: 50px;
+  display: block;
+  margin-right: 10px;
+}
+.info-isi h2 {
+  font-size: 15px;
+}
+.info-isi p {
+  font-size: 10px;
+}
+@media (min-width: 560px) {
+  .info {
+    width: 960px;
+    margin: auto;
+    justify-content: space-between;
+  }
+}
+/* medsos */
+.medsos {
 }
 
-nav-left ul li ul li {
-    clear: both;
-    width: 100%;
+.medsos-icon img {
+  width: 50px;
+  margin: 10px;
+}
+
+.medsos-icon {
+  display: flex;
+  justify-content: center;
+}
+
+.medsos-isi {
+  text-align: center;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.medsos-form {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: lightslategray;
+}
+
+.medsos-form form input {
+  width: 200px;
+  height: 25px;
+  background: rgb(163, 227, 238);
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin-right: -4px;
+}
+
+.medsos-form form input[type="email"] {
+  padding: 10px;
+}
+
+.medsos-form button {
+  height: 25px;
+  padding: 5px;
+  text-transform: uppercase;
+  background: rgb(163, 227, 238);
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+@media (min-width: 560px) {
+  .medsos {
+    width: 960px;
+    margin: auto;
+  }
+}
+/* footer */
+footer {
+  margin-bottom: 100px;
+  background: lightslategray;
+  color: #fff;
+  display: flex;
+}
+
+.logo-bank img {
+  width: 70px;
+}
+
+.identitas {
+  flex: 1;
+}
+.sitemap {
+  flex: 1;
+}
+.sitemap li {
+  list-style: none;
+  padding-top: 10px;
+}
+.sitemap li a {
+  text-decoration: none;
+  color: #fff;
+}
+.payment {
+  flex: 1;
+}
+.sitemap h2,
+.identitas h2 {
+  font-size: 14px;
+}
+.identitas p {
+  font-size: 12px;
+}
+.sitemap a {
+  font-size: 12px;
+}
+.bank p {
+  font-size: 10px;
+}
+.bank h3 {
+  font-size: 12px;
+}
+.bank {
+  padding-bottom: 15px;
+}
+@media (min-width: 560px) {
+  footer {
+    width: 960px;
+    margin: auto;
+    padding-top: 20px;
+  }
+  .sitemap,
+  .identitas h2 {
+    font-size: 20px;
+  }
+  .identitas p {
+    font-size: 15px;
+  }
+  .sitemap a {
+    font-size: 15px;
+  }
+  .sitemap h2 {
+    font-size: 20px;
+  }
 }
